syntax = "proto3";
package dipstick.xcp.v1;

import "dipstick/can/v1/id.proto";

message CanTransport {
  uint64 can_socket_id = 1;
  dipstick.can.v1.Id client_id = 2;
  dipstick.can.v1.Id server_id = 3;
  dipstick.can.v1.Id broadcast_id = 4;
}
